<resources>
    <string name="app_name">PokemonTracker</string>
    <string name="unk">Unk</string>
    <string name="male">Male</string>
    <string name="save">Save</string>
    <string name="_0">0</string>
    <string name="defence">Defence</string>
    <string name="attack">Attack</string>
    <string name="level">Level</string>
    <string name="hp">HP</string>
    <string name="_800_0_kg">800.0</string>
    <string name="_2_2_m">2.2</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="wild_horse_pokemon">Wild Horse Pokemon</string>
    <string name="glastrier">Glastrier</string>
    <string name="species">Species</string>
    <string name="name">Name</string>
    <string name="poke_tracker">Poke - Tracker</string>
    <string name="register_new_catch">Register New Catch</string>
    <string name="national_number">National Number</string>
    <string name="_896">896</string>
    <string name="weight">Weight</string>
    <string name="base_stats">Base Stats</string>
    <string name="reset">Reset</string>
    <string name="female">Female</string>
    <string name="fem">fem</string>
    <string name="linear">Linear</string>
    <string name="main">Constr</string>
    <string name="table">Table</string>
    <string name="delete">Delete Oldest Entry\n</string>
</resources>