<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/AppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poke_tracker"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/newCatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_new_catch"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/natNumber"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/national_number"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_natNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/_896"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pokeName"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_pokeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/glastrier"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/speciesCat"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/species"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_speciesCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/wild_horse_pokemon"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pokeGender"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/gender"
                android:textSize="16sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/radioFem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fem" />

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radioUnk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unk" />
                </TableRow>
            </TableLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/pokeHeight"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/height"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_pokeHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number|numberDecimal"
                android:text="@string/_2_2_m"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/pokeWeight"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/weight"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_pokeWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number|numberDecimal"
                android:text="@string/_800_0_kg"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/pokeLevel"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/level"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinLevel"
                android:layout_width="158dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/baseStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_stats"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/pokeHP"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/hp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_pokeHP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/_0"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/pokeAttack"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/attack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_pokeAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/_0"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/pokeDefence"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/defence"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_pokeDefence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/_0"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/linearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linear" />

            <Button
                android:id="@+id/mainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>